--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,16 @@ img {
     vertical-align: middle;
 }
 
+
+/* Grid */
+
+.page {
+    height: 100%;
+}
+
+
+/* Header */
+
 .main-header {
     position: absolute;
     z-index: 2;
@@ -71,44 +81,65 @@ img {
     height: 56px;
     margin: 0 auto;
     margin-bottom: 55px;
-    /*padding-top: 15px;*/
     padding-left: 72px;
     padding-bottom: 15px;
     padding-right: 72px;
+    /* grid */
+    outline: 5px solid rgba(0, 255, 0, 0.7);
+    outline-offset: -5px;
 }
 
 .main-header-logo {
     text-align: center;
-    margin-bottom: -15px;
+    /*временно*/
+    margin-top: -26px;
+    /* grid */
+    order: 1;
+    justify-self: center;
+    outline: 5px solid rgba(255, 0, 0, 0.3);
+    outline-offset: -5px;
 }
 
 
 /* Main navigation */
 
 .main-navigation {
+    display: grid;
     font-size: 14px;
     line-height: 26px;
     color: var(--basic-black);
     background-color: transparent;
-    /*padding-left: 72px;
-    padding-right: 72px;*/
+}
+
+.main-header-bar {
+    background-color: var(--basic-black);
 }
 
 .main-navigation-wrapper {
     background-color: var(--basic-white);
+    /* grid */
+    display: grid;
+    grid-template-columns: 1fr min-content;
+    width: 1056px;
+    height: 56px;
+    margin-bottom: -26px;
+    margin: 0 auto;
+    padding: 0 0px;
+    margin-bottom: -30px;
 }
 
 .site-navigation {
+    /*сброс отступов для списка ссылок в навигации*/
+    margin: 0;
+    padding: 0;
+    /*-------------------------*/
+    padding-top: 18px;
     list-style: none;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 912px;
+    width: 1056px;
     max-height: 56px;
-    margin-top: -55px;
-    margin-bottom: 55px;
-    padding-left: 72px;
-    padding-right: 72px;
 }
 
 .site-navigation-current a:not([href]) {
@@ -140,14 +171,20 @@ img {
     z-index: 0;
     margin-top: 55px;
     text-align: center;
+    /*---grid-----*/
+    outline: 5px solid rgba(0, 255, 255, 0.2);
+    outline-offset: -5px;
 }
 
 .desc {
     width: 1200px;
     height: 174px;
-    padding-top: 42px;
+    padding-top: 55px;
     text-align: center;
     line-height: 26px;
+    /*---grid-----*/
+    outline: 5px solid rgba(0, 255, 255, 0.5);
+    outline-offset: -5px;
 }
 
 .text-pic {
@@ -206,28 +243,40 @@ img {
 /* Features */
 
 .features {
-    width: 1200px;
+    width: 1100px;
     height: 184px;
-    padding-left: 72px;
+    padding-left: 50px;
     padding-top: 64px;
     padding-bottom: 82px;
-    padding-right: 72px;
+    padding-right: 50px;
+    /* grid */
+    outline: 5px solid rgba(255, 0, 0, 0.3);
 }
 
 .features-list {
+    /* обнуление отступов */
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    /*-----------------*/
     list-style: none;
 }
 
 .feature-item {
     display: inline-block;
     box-sizing: border-box;
-    max-width: 350px;
-    margin-left: 20px;
-    margin-right: 20px;
+    max-width: 430px;
+    margin-left: 10px;
+    margin-right: 10px;
     text-align: center;
     font-weight: 400;
-    /*align-items: flex-end;*/
+    align-items: flex-end;
     vertical-align: bottom;
+    /* grid */
+    outline: 5px solid rgba(0, 255, 255, 0.3);
+    outline-offset: -5px;
 }
 
 .feature-item h3 {
@@ -239,6 +288,8 @@ img {
     font-size: 14px;
     line-height: 21px;
     vertical-align: middle;
+    /*-------------*/
+    margin: 0 10px;
 }
 
 
@@ -250,6 +301,11 @@ img {
     padding-left: 72px;
     padding-right: 72px;
     background-color: var(--light-yellow);
+    /*-----------------*/
+    outline: 5px solid rgba(0, 255, 255, 0.7);
+    outline-offset: -5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .landmark-item {
@@ -259,6 +315,9 @@ img {
     padding-left: 25px;
     padding-right: 25px;
     vertical-align: center;
+    /*---grid-----*/
+    outline: 5px solid rgba(0, 255, 255, 0.7);
+    outline-offset: -5px;
 }
 
 
@@ -269,6 +328,9 @@ img {
     /*height: 147px;*/
     /*text-align: center;*/
     padding-top: 58px;
+    /*-----------------*/
+    outline: 5px solid rgba(0, 255, 0, 0.7);
+    outline-offset: -5px;
 }
 
 .offers h1 {
@@ -325,6 +387,9 @@ img {
     margin-bottom: -231px;
     font-size: 21px;
     line-height: 52px;
+    /* grid */
+    outline: 5px solid rgba(0, 11, 55, 0.8);
+    outline-offset: -5px;
 }
 
 .input-data h1 {
@@ -346,6 +411,9 @@ img {
     vertical-align: middle;
     font-size: 21px;
     line-height: 67px;
+    /* grid */
+    outline: 5px solid rgba(0, 255, 255, 0.3);
+    outline-offset: -5px;
 }
 
 .button-find {
@@ -376,11 +444,17 @@ img {
     margin-top: -75px;
     height: 120px;
     padding-left: 153px;
+    /* grid */
+    outline: 5px solid rgba(255, 0, 0, 0.7);
+    outline-offset: -5px;
 }
 
 .footer-contacts {
     width: 180px;
     margin-right: 204px;
+    /* grid */
+    outline: 5px solid rgba(0, 255, 255, 0.7);
+    outline-offset: -5px;
 }
 
 .footer-contacts a {
@@ -403,6 +477,9 @@ img {
     align-content: center;
     text-align: center;
     list-style: none;
+    /* grid */
+    outline: 5px solid rgba(0, 255, 0, 0.7);
+    outline-offset: -5px;
 }
 
 .footer-social h2 {
@@ -435,6 +512,9 @@ img {
     text-align: center;
     font-weight: 400;
     vertical-align: bottom;
+    /* grid */
+    outline: 5px solid rgba(0, 255, 0, 0.7);
+    outline-offset: -5px;
 }
 
 .footer-copyright .button:hover,
